--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,50 +1,22 @@
 @import "./variables";
-/* :root {
-  --white: #fff;
-  
-  --zinc-900: #18181B;
-  --zinc-800: #27272A;
-  --zinc-700: #3F3F46;
-
-  --green-700: #15803D;
-  --green-500: #22C55E;
-
-  --gray-400: #9CA3AF;
-  --gray-200: #E5E7EB;
-
-  --orange-500: #f97316;
-
-  --indigo-800: #3730a3;
-
-  --orange-indigo-gradient: linear-gradient(180deg, var(--orange-500) 0%, var(--indigo-800) 100%);
-  --green-indigo-gradient: linear-gradient(180deg, var(--green-500) 0%, var(--indigo-800) 100%);
-  
-  --hover-card: var(--orange-500);
-  --border-button: var(--zinc-700);
-  
-  --sm-m-content: 240px;
-  --lg-m-content: 328px;
-  --t-content: 760px;
-
-  --text-lg-d: 18px;
-  --text-md-d: 16px;
-  --text-sm-d: 14px;
-  --text-lg-m: 16px;
-  --text-md-m: 14px;
-
-  --heading-lg-d: 56px;
-  --heading-md-d: 32px;
-  --heading-sm-d: 24px;
-  --heading-lg-m: 32px;
-  --heading-md-m: 24px;
-  --heading-sm-m: 16px;
-} */
 
 body {
   font-family: 'Roboto', sans-serif;
+  background-color: $zinc-900;
 }
 
 .main {
-  background-color: $zinc-900;
   height: 100vh;
+  width: 100%;
+}
+
+.container {
+  background-color: transparent;
+  color: $white;
+  
+  width: 100%;
+  height: 100vh;
+  
+  overflow-y: scroll;
+  overflow-x: hidden;
 }
