--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -2,7 +2,7 @@
 @import "./mixins";
 @import "./variables";
 
-body {
+.body {
   font-family: 'Roboto', sans-serif;
   background-color: $zinc-900;
 }
