--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -13,14 +13,15 @@
   @extend .flex;
   justify-content: space-between;
   
-  background-color: $zinc-900;
+  @extend .background-color;
   
   z-index: 10;
   
   font-weight: bold;
 
   &__mobile_container {
-    background-color: $zinc-900;
+    @extend .background-color;
+
     width: 100vw;
     height: 3.438rem; //55px
     padding: 1.25rem .5rem; // 20px 8px
@@ -44,26 +45,29 @@
 
   &__toggle {
     background-color: transparent;
-    border: none;
     color: $gray-200;
+
+    border: none;
 
     @include b.breakpoints(desktop){
       display: none;
     }
   }
+
   &__nav_active {
     top: 0 !important;
   }
   &__nav {
-    background-color: $zinc-900;
+    @extend .background-color;
 
     border-bottom: 1px solid $zinc-700;
     
     position: absolute;
     top: -12.5rem; //-200px
     left: 0;
-    width: 100%;
     z-index: -1;
+    
+    width: 100%;
 
     transition: .5s;
 
@@ -90,17 +94,20 @@
     @include b.breakpoints(desktop){
       position: relative;
       top: 0;
+      
       width: auto;
       
       border: none;
 
       transition: none;
-      
+
       ul {
         flex-direction: row;
         padding: 0;
         gap: 1.625rem; //26px
       }
     }
+
+    
   }
 }
