--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -8,14 +8,22 @@
 }
 
 .main {
-  height: 100vh;
+  min-height: 100vh;
   width: 100%;
+}
+
+.section {
+  display: block;
+  padding-top: 3.5rem;
+}
+
+.background-color {
+  background-color: $primary-color;
 }
 
 .container {
   background-color: transparent;
   color: $white;
-  
   background-image: url("../assets/backgrounds/mobile.svg");
 
   @include raw-breakpoins(427px){
@@ -28,8 +36,9 @@
   
   background-repeat: no-repeat;
   background-position: center;
+  
   width: 100%;
-  height: 100%;
+  height: 100vh;
   
   overflow-y: scroll;
   overflow-x: hidden;
@@ -39,3 +48,5 @@
   display: flex;
   align-items: center;
 }
+
+//font-family: 'Bebas Neue', cursive;
