--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -22,6 +22,19 @@
   } */
 }
 
+.logo {
+  &__header {
+    width: 8rem; // 128px
+
+    @include b.breakpoints(desktop){
+      width: 15rem; // 240px
+    }
+    @include b.breakpoints(desktop-lg){
+      width: 21.145rem; //338.32px
+    }
+  }
+}
+
 .background-color {
   background-color: $primary-color;
 }
