del: Remove font family

--- a/src/components/Heading/Heading.module.scss
+++ b/src/components/Heading/Heading.module.scss
@@ -1,7 +1,7 @@
 @use "../../styles/mixins" as b;
 
 .heading {
-  font-family: 'Bebas Neue', cursive;
+  /* font-family: 'Bebas Neue', cursive; */
 }
 
 .size {
