--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -3,7 +3,8 @@
 @import "./variables";
 
 .body {
-  font-family: 'Roboto', sans-serif;
+  /* font-family: 'Roboto', sans-serif; */
+
   background-color: $zinc-900;
 }
 
