--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -77,3 +77,11 @@
   display: flex;
   align-items: center;
 }
+
+.absolute_zero {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+}
