--- a/src/components/Heading/Heading.module.scss
+++ b/src/components/Heading/Heading.module.scss
@@ -1,4 +1,5 @@
 @use "../../styles/mixins" as b;
+@import "../../styles/mixins";
 @import "../../styles/variables";
 @import "../../styles/global.scss";
 
@@ -6,6 +7,17 @@
   @extend .flex;
   gap: 1.5rem; //24px;
   width: 15rem; //240px;
+  justify-content: center;
+
+  @include raw-landscape(1024px){
+    justify-content: flex-start;
+    width: 100%;
+  }
+
+  @include breakpoints(tablet-sm) {
+    width: 100%;
+    justify-content: flex-start;
+  }
 
   &__sub {
     display: block;
@@ -20,21 +32,24 @@
   &__lg {
     font-size: 2rem; //32px
 
-    @include b.breakpoints(desktop) {
+    @include b.breakpoints(tablet-sm) {
       font-size: 3.5rem; //56px
+    }
+    @include raw-landscape(845px) {
+      font-size: 2.5rem; //40px
     }
   }
   &__md {
     font-size: 1.5rem; //24px
 
-    @include b.breakpoints(desktop){
+    @include b.breakpoints(tablet-sm){
       font-size: 2rem; //32px
     }
   }
   &__sm {
     font-size: 1rem; //16px
 
-    @include b.breakpoints(desktop){
+    @include b.breakpoints(tablet-sm){
       font-size: 1.5rem; //24px
     }
   }
