--- a/src/components/Avatar/Avatar.module.scss
+++ b/src/components/Avatar/Avatar.module.scss
@@ -1,3 +1,4 @@
+@use "../../styles/mixins" as b;
 @import "../../styles/global.scss";
 @import "../../styles/mixins.scss";
 
@@ -20,6 +21,16 @@
     @include raw-breakpoins(600px, true){
       width: clamp(6.25rem, 100%, 15rem); //100px 100% 240px
       height: clamp(6.25rem, 25vh, 15rem); //100px 25vh 240px
+    }
+
+    @include b.breakpoints(tablet-sm){
+      width: 20rem; //320px
+      height: 20rem; //320px
+    }
+
+    @include raw-landscape(845px){
+      width: clamp(6.25rem, 100%, 15rem); //100px 100% 240px
+      height: clamp(6.25rem, 53vh, 15rem); //100px 53vh 240px
     }
   }
 }
