--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -49,6 +49,7 @@
   padding: 3.5rem 1.25rem 0; //56px 20px
 
   @extend .flex;
+    flex-direction: column;
 
   @include raw-breakpoins(650px, true){
     display: block;
