--- a/src/components/Avatar/Avatar.module.scss
+++ b/src/components/Avatar/Avatar.module.scss
@@ -1,38 +1,27 @@
-@use "../../styles/mixins" as b;
-@import "../../styles/global.scss";
-@import "../../styles/mixins.scss";
+@use "../../styles/breakpoints" as break;
+@forward "../../styles/util";
 
 .avatar {
   position: relative;
 
   @extend .flex;
-  justify-content: center;
+    justify-content: center;
 
   background-image: url("../../assets/blob.svg");
   background-repeat: no-repeat;
   background-position: center;
 
   &__image {
-    width: 15rem; //240px;
-    height: 15rem; //240px;
+    width: clamp(6.25rem, 100%, 15rem); //100px 100% 240px
+    height: clamp(6.25rem, 25vh, 15rem); //100px 25vh 240px
     
     border-radius: 50%;
 
-    @include raw-breakpoins(600px, true){
-      width: clamp(6.25rem, 100%, 15rem); //100px 100% 240px
-      height: clamp(6.25rem, 25vh, 15rem); //100px 25vh 240px
+    @include break.breakpoint(tablet) {
+      width: 20rem;
+      height: 20rem;
     }
-
-    @include b.breakpoints(tablet-sm){
-      width: 20rem; //320px
-      height: 20rem; //320px
-    }
-
-    @include raw-landscape(843px){
-      width: clamp(6.25rem, 100%, 15rem); //100px 100% 240px
-      height: clamp(6.25rem, 53vh, 15rem); //100px 53vh 240px
-    }
-    @include raw-landscape(844px, false){
+    @include break.landscape(52.75em) {
       width: clamp(6.25rem, 100%, 15rem); //100px 100% 240px
       height: clamp(6.25rem, 53vh, 15rem); //100px 53vh 240px
     }
