--- a/src/components/ScrollDown/ScrollDown.module.scss
+++ b/src/components/ScrollDown/ScrollDown.module.scss
@@ -1,4 +1,5 @@
-@use "../../styles/mixins" as b;
+//@use "../../styles/mixins" as b;
+@use "../../styles/breakpoints" as break;
 @import "../../styles/mixins";
 
 .scroll {
@@ -7,8 +8,11 @@
   width: 1.5rem; //24px;
   height: 1.5rem; //24px;
 
-  @include b.breakpoints(tablet-sm) {
+  @include break.breakpoint(tablet){
     width: 2.25rem; //36px;
     height: 2.25rem; //36px;
+  }
+  @include break.landscape(){
+    display: none;
   }
 }
