--- a/src/styles/_util.scss
+++ b/src/styles/_util.scss
@@ -6,3 +6,9 @@
 .section {
   margin-top: 3.5rem; //56px;
 }
+
+.transition-colors {
+  transition-property: background-color, color;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+}
