--- a/src/styles/_util.scss
+++ b/src/styles/_util.scss
@@ -1,3 +1,5 @@
+@import "../styles/variables";
+
 .flex {
   display: flex;
   align-items: center;
@@ -11,4 +13,11 @@
   transition-property: background-color, color;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-duration: 150ms;
+}
+
+.focus-visible {
+  outline-style: solid;
+  outline-width: 2px;
+  outline-color: $green-500;
+  border-radius: .25rem;
 }
