style: Add portrait media query

--- a/src/styles/_breakpoints.scss
+++ b/src/styles/_breakpoints.scss
@@ -22,3 +22,8 @@ $breakpoints: (
     @content;
   }
 }
+@mixin portrait(){
+  @media (max-height: 56.25em) and (orientation: portrait){
+    @content;
+  }
+}
