style: Add focus visible

--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -150,6 +150,12 @@
     @include break.breakpoint(desktop) {
       display: none;
     }
+
+    a {
+      &:focus-visible {
+        @extend .focus-visible;
+      }
+    }
   }
 
   &__active {
