style: Add media queries

--- a/src/components/Hero/Hero.module.scss
+++ b/src/components/Hero/Hero.module.scss
@@ -12,6 +12,7 @@
     
   @include break.breakpoint(tablet) {
     flex-direction: row-reverse;
+    gap: 1.5rem;
   }
   @include break.landscape() {
     flex-direction: row-reverse;
@@ -34,13 +35,21 @@
     
     border-radius: 50%;
 
+    
+    @include break.portrait(33.9375em) {
+      width: 9rem;
+      height: 9rem;
+    }
+
     @include break.breakpoint(tablet) {
       width: 20rem;
       height: 20rem;
     }
     @include break.landscape(52.75em) {
-      width: clamp(6.25rem, 100%, 15rem); //100px 100% 240px
-      height: clamp(6.25rem, 53vh, 15rem); //100px 53vh 240px
+      width: clamp(3.05rem, 42.7vw, 15rem);
+      //height: 6.25rem;
+      //width: clamp(6.25rem, 100%, 15rem); //100px 100% 240px
+      height: clamp(6.25rem, 52vh, 15rem); //100px 53vh 240px
     }
   }
 }
