style: add none pointer events and remove title to img

--- a/src/screens/About/About.module.scss
+++ b/src/screens/About/About.module.scss
@@ -72,6 +72,8 @@
 .icons {
   display: none;
 
+  pointer-events: none;
+
   @include break.breakpoint(tablet-lg){
     display: grid;
     grid-template-columns: repeat(4, 60px);
