--- a/src/styles/reset.scss
+++ b/src/styles/reset.scss
@@ -45,4 +45,14 @@ table {
 	margin: 0;
 	padding: 0;
 	box-sizing: border-box;
+
+	scroll-behavior: smooth;
+	&::-webkit-scrollbar {
+		width: 4px;
+	}
+	&::-webkit-scrollbar-thumb {
+		background: #9CA3AF;
+		border-radius: 4px;
+	}
+
 }
