--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -19,13 +19,13 @@ $indigo-800: #3730a3;
 $primary-color: $zinc-900;
 $secondary-color: $zinc-800;
 
-$orange-indigo-gradient: linear-gradient(180deg, $orange-500 0%, $indigo-800 100%);
+/* $orange-indigo-gradient: linear-gradient(180deg, $orange-500 0%, $indigo-800 100%);
 $green-indigo-gradient: linear-gradient(180deg, $green-500 0%, $indigo-800 100%);
   
 $hover-card: $orange-500;
-$border-button: $zinc-700;
+$border-button: $zinc-700; */
 
-$sm-m-content: 240px;
+/* $sm-m-content: 240px;
 $lg-m-content: 328px;
 $t-content: 760px;
 
@@ -40,4 +40,4 @@ $heading-md-d: 32px;
 $heading-sm-d: 24px;
 $heading-lg-m: 32px;
 $heading-md-m: 24px;
-$heading-sm-m: 16px;
+$heading-sm-m: 16px; */
