style: Add flex style in the content class

--- a/src/components/Card/Card.module.scss
+++ b/src/components/Card/Card.module.scss
@@ -99,7 +99,10 @@
   color: $white;
   padding: 1.5rem;
 
-  display: block;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 2rem;
   border-radius: .5rem;
 }
 
