--- a/src/components/Card/Card.module.scss
+++ b/src/components/Card/Card.module.scss
@@ -159,9 +159,12 @@
   font-size: 1rem;
 }
 
+.gif {
+  position: relative !important;
+  width: 100% !important;
 
-.tecnologies {
-  width: 32;
-  height: 32;
+  img {
+    border-radius: .5rem;
+  }
 }
 
