--- a/src/components/Heading/Heading.module.scss
+++ b/src/components/Heading/Heading.module.scss
@@ -1,12 +1,11 @@
-//@use "../../styles/mixins" as b;
 @use "../../styles/breakpoints" as break;
 @use "../../styles/variables" as *;
-@forward "../../styles/util";
 
 .heading {
-  @extend .flex;
-    gap: 1.5rem; //24px;
-    justify-content: center;
+  display: flex;
+  align-items: center;
+  gap: 1.5rem; //24px;
+  justify-content: center;
 
   &__sub {
     display: block;
