--- a/src/screens/Projects/Projects.module.scss
+++ b/src/screens/Projects/Projects.module.scss
@@ -31,13 +31,21 @@
   height: 80vh;
   padding-bottom: 1rem;
 
+  @include break.breakpoint(tablet) {
+    gap: .5rem;
+    height: inherit;
+  }
+
   @include break.breakpoint(tablet-lg) {
     &::-webkit-scrollbar {
       display: none;
     }
+    width: 80%;
+    margin-inline: auto;
   }
 
   @include break.breakpoint(desktop) {
+    grid-template-columns: repeat(auto-fill, minmax(232px, 1fr));
     padding-bottom: 2rem;
   }
 }
