--- a/src/styles/reset.scss
+++ b/src/styles/reset.scss
@@ -25,6 +25,11 @@ footer, header, hgroup, menu, nav, section {
 }
 body {
 	line-height: 1;
+
+	&::-webkit-scrollbar {
+		width: 4px;
+		background-color: #18181b;
+	}
 }
 ol, ul {
 	list-style: none;
@@ -52,7 +57,7 @@ table {
 	}
 	&::-webkit-scrollbar-thumb {
 		background: #9CA3AF;
-		border-radius: 4px;
+		border-radius: 2px;
 	}
 
 }
